force-app/main/default/objects/MV_Hotel__c/MV_Hotel__c.object-meta.xml
<CustomObject>
    <description>All hotels managed by corporation.</description>
    <label>Hotel</label>
    <nameField>
        <label>Hotel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hotels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>