force-app/main/default/objects/MV_Hotel__c/fields/MV_DIV_TrailingYearACV__c.field-meta.xml
<CustomField>
    <fullName>MV_DIV_TrailingYearACV__c</fullName>
    <description>This field measures the total annualized revenue from contracts over the last 12 months, providing a snapshot of recent business performance.</description>
    <label>Trailing Year ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>