force-app/main/default/objects/MV_Hotel__c/fields/MV_FOR_RatingStars__c.field-meta.xml
<CustomField>
    <fullName>MV_FOR_RatingStars__c</fullName>
    <description>Image representation of MV_SEL_Rating__c field.</description>
    <formula>IMAGE( 
CASE( MV_SEL_Rating__c, 
&quot;1&quot;, &quot;/img/samples/stars_100.gif&quot;,
&quot;2&quot;, &quot;/img/samples/stars_200.gif&quot;,
&quot;3&quot;, &quot;/img/samples/stars_300.gif&quot;, 
&quot;4&quot;, &quot;/img/samples/stars_400.gif&quot;, 
&quot;5&quot;, &quot;/img/samples/stars_500.gif&quot;, 
&quot;/img/samples/stars_000.gif&quot;), 
&quot;rating&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating Stars</label>
    <type>Text</type>
</CustomField>