force-app/main/default/objects/MV_Hotel__c/fields/MV_NUM_AvailableRooms__c.field-meta.xml
<CustomField>
    <fullName>MV_NUM_AvailableRooms__c</fullName>
    <description>This fields indicates the number of available rooms.</description>
    <label>Available Rooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>