force-app/main/default/objects/MV_Hotel__c/fields/MV_NUM_RoomsOutOfService__c.field-meta.xml
<CustomField>
    <fullName>MV_NUM_RoomsOutOfService__c</fullName>
    <description>This field indicates the number of rooms out of service.</description>
    <label>Rooms out of service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>