force-app/main/default/objects/MV_Hotel__c/fields/MV_NUM_TotalRentedRooms__c.field-meta.xml
<CustomField>
    <fullName>MV_NUM_TotalRentedRooms__c</fullName>
    <description>This field indicates the number of total rented rooms.</description>
    <label>Total Rented Rooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>