force-app/main/default/objects/MV_Hotel__c/fields/MV_NUM_TotalRooms__c.field-meta.xml
<CustomField>
    <fullName>MV_NUM_TotalRooms__c</fullName>
    <description>This field indicates the total number of rooms.</description>
    <label>Total Rooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>