force-app/main/default/objects/MV_Hotel__c/fields/MV_SEL_Country__c.field-meta.xml
<CustomField>
    <fullName>MV_SEL_Country__c</fullName>
    <defaultValue>&quot;Unallocated&quot;</defaultValue>
    <description>This field indicates the country where the hotel is located.</description>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MV_Core_Country</valueSetName>
    </valueSet>
</CustomField>