force-app/main/default/objects/MV_Hotel__c/fields/MV_SEL_Rating__c.field-meta.xml
<CustomField>
    <fullName>MV_SEL_Rating__c</fullName>
    <description>Indicates the hotel&apos;s rating.</description>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MV_Core_Rating</valueSetName>
    </valueSet>
</CustomField>