force-app/main/default/objects/MV_Hotel__c/fields/MV_TXT_City__c.field-meta.xml
<CustomField>
    <fullName>MV_TXT_City__c</fullName>
    <description>Indicates the city where the hotel is located.</description>
    <label>City</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>