force-app/main/default/objects/MV_Hotel__c/fields/MV_TXT_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>MV_TXT_PostalCode__c</fullName>
    <description>This field stores the postal code of the hotel&apos;s location.</description>
    <label>Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>