force-app/main/default/objects/MV_Hotel__c/fields/MV_TXT_Street__c.field-meta.xml
<CustomField>
    <fullName>MV_TXT_Street__c</fullName>
    <description>This fields indicates the street where the hotel is located.</description>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>